@@ -18,6 +18,13 @@ sub cjoin
 	my ($svr, $chan) = @_;
 	
 	Auto::socksnd($svr, "JOIN $chan");
+	
+	unless (defined $Parser::IRC::botchans{$svr}) {
+		@{ $Parser::IRC::botchans{$svr} } = ($chan);
+	}
+	else {
+		push(@{ $Parser::IRC::botchans{$svr} }, $chan);
+	}
 }
 
 # Part a channel.
@@ -72,7 +79,7 @@ sub nick
 	
 	Auto::socksnd($svr, "NICK $newnick");
 	
-	$Parser::IRC::botnick{$svr} = $newnick;
+	$Parser::IRC::botnick{$svr}{newnick} = $newnick;
 }
 
 # Quit IRC.
